--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "axios": "^0.27.2",
     "google-map-react": "^2.2.0",
     "promise": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
